examples/failing/ImportExplicit.purs
-- @shouldFailWith UnknownImportType
module Main where

import M1 (X(..))
